Bug 1579285: Allow the discovery page to show idp logo
If the logo is part of the metadata

To test - see bug report

Also fixing up metadata textarea overlapping the label

behatnotneeded

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -428,3 +428,7 @@
         }
     }
 }
+
+#auth_config_institutionidp {
+    width: 90%;
+}
